[tool.poetry]
name = "gke-autopilot-cost-calculator"
version = "0.1.0"
description = ""
authors = ["kahnwong <karn@karnwong.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "3.8.0"
pandas = "2.1.0"
pydantic = "2.4.2"
seaborn = "0.12.2"
streamlit = "1.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
